--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "Libraries"
 //include ':EasyWidgets'
 //include ':FileScrapper'
-//include ':PUBG_Utils'
+//include ':PUBG_Utils' // why is this here?
 include ':app'
 //include ':NxPreference'
 //include ':PhoneVerification'
@@ -10,7 +10,7 @@ include ':EasyInsta'
 include ':ClorastoreDB'
 include ':Clorabase'
 include ':Console'
-include ':EasyYoutube'
+include ':EasyYoutube' // why is this here?
 include ':BotGram'
 //include ':EasyAuth'
 //include ':ScrollAnimator'
@@ -18,7 +18,7 @@ include ':BotGram'
 include ':CloremDB'
 //include ':Clorabase-APIs'
 include ':AsyncTask'
-include ':BotTube'
+include ':BotTube' // why is this here?
 //include ':WebWorker'
 //include ':Chatroom'
 include ':ClorographDB'
