--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
     - name: Publish to GitHub Packages
-      if: github.event_name == 'release'
+      # if: github.event_name == 'release'
       run: ./gradlew publish
       env:
         USERNAME: ${{ github.actor }}
