Different root project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = "Libraries"
+rootProject.name = "EasyInsta"
 //include ':EasyWidgets'
 //include ':FileScrapper'
 //include ':PUBG_Utils' // why is this here?
