--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '17'
         distribution: 'temurin'
 
     - name: Setup Gradle
@@ -32,10 +32,10 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
+    # The USERNAME and TOKEN need to correspond to the credentials
+    # environment variables used in the publishing section of your build.gradle
     - name: Publish to GitHub Packages
-      # if: github.event_name == 'release'
+      if: github == 'release'
       run: ./gradlew publish
       env:
         USERNAME: ${{ github.actor }}
