--- a/JxInsta/build.gradle
+++ b/JxInsta/build.gradle
@@ -18,7 +18,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/ncovercash/JxInsta")
+            url = uri("https://maven.pkg.github.com/ErrorxCode/JxInsta")
             credentials {
                 // provided by GitHub workflow
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
